tests/baselines/reference/generatorTypeCheck59.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck59.ts(3,11): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck59.ts (1 errors) ====
    function* g() {
        class C {
            @(yield "")
              ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
            m() { }
        };
    }